--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="login-form">
-        <form action="/success.html" method="get">
+        <form action="./success.html" method="get">
           <label for="Lemail">Email Address:</label><br>
           <input type="email" id="fname" name="fname" /><br>
           <label for="Lpassword">Password:</label><br>
